Add Color Picker for New Notes

--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@ div.note {
   border-width: 3px;
   border-style: solid;
   border-color: black;
-  height: 200px;
+  height: 400px;
   width: 300px;
   float: left;
   margin: 10px;
   padding: 10px;
   position: relative;
+  overflow: hidden;
 }
 
 div.subject {
@@ -21,13 +22,17 @@ div.buttons {
   position: absolute;
   right: 10px;
   bottom: 10px;
+  box-shadow: 0 0 10px 5px grey;
+  background-color: white;
 }
 
-div.new_note input[type="text"], div.new_note textarea {
+div.new_note input[type="color"],
+div.new_note input[type="text"],
+div.new_note textarea {
   width: 100%;
 }
 
 div.new_note textarea {
   width: 100%;
-  height: 100px;
+  height: 275px;
 }
