--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ div.note {
   margin: 10px;
   padding: 10px;
   position: relative;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 div.subject {
@@ -23,11 +23,7 @@ div.plaintext {
 }
 
 div.buttons {
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
-  box-shadow: 0 0 10px 5px grey;
-  background-color: white;
+  float: right;
 }
 
 div.new_note input[type="color"],
